--- a/MeetManagerPrism/Views/Manager/ManagerEventsPage.xaml
+++ b/MeetManagerPrism/Views/Manager/ManagerEventsPage.xaml
@@ -14,7 +14,7 @@
     FontSize="30"
     mc:Ignorable="d">
 
-    <Grid Background="#086CB4">
+    <Grid Background="#20448C">
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition Width="auto" MinWidth="500" />
@@ -32,7 +32,10 @@
             Grid.Column="1"
             Margin="0,50"
             AutoGenerateColumns="False"
+            Background="#086CB4"
             CanUserAddRows="False"
+            FontSize="17"
+            Foreground="#FFBC24"
             ItemsSource="{Binding EventsList}"
             SelectedItem="{Binding SelectedEvent}"
             VerticalScrollBarVisibility="Visible">
