--- a/MeetManagerPrism/Views/Manager/CreateEventPage.xaml
+++ b/MeetManagerPrism/Views/Manager/CreateEventPage.xaml
@@ -139,6 +139,7 @@
             <TextBlock
                 Margin="10"
                 Foreground="Red"
+                TextWrapping="Wrap"
                 Text="{Binding ErrorMessage}"
                 TextAlignment="Center" />
         </StackPanel>
